--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,20 +4,41 @@
 </div>
 
 <div>
-<h3>Top 10 Crimes</h3>
 
-<table style="border: 1px solid #eeeeee;">
-  <tbody>
-    <tr>
-      <th style="background-color: #eeeeee;">Category</th>
-      <th style="background-color: #eeeeee;">Arrest count</th>
-    </tr>
-    <tr><td colspan="2" height="20"></td></tr>
-    <tr *ngFor="let crime of crimes">
-      <td width="250">{{ crime.Category }}</td>
-      <td>{{ crime.arrest_count }}</td>
-    </tr>
-  </tbody>
-</table>
+  <h3>Top 10 Crimes</h3>
+
+  <table style="border: 1px solid #eeeeee;">
+    <tbody>
+      <tr>
+        <th style="background-color: #eeeeee;">Category</th>
+        <th style="background-color: #eeeeee;">Arrest count</th>
+      </tr>
+      <tr><td colspan="2" height="20"></td></tr>
+      <tr *ngFor="let crime of crimes">
+        <td width="250">{{ crime.Category }}</td>
+        <td>{{ crime.arrest_count }}</td>
+      </tr>
+    </tbody>
+  </table>
+
+</div>
+
+<div>
+  
+  <h3>Top 10 Players for theft</h3>
+
+  <table style="border: 1px solid #eeeeee;">
+    <tbody>
+      <tr>
+        <th style="background-color: #eeeeee;">Name</th>
+        <th style="background-color: #eeeeee;">Arrest count</th>
+      </tr>
+      <tr><td colspan="2" height="20"></td></tr>
+      <tr *ngFor="let player of players">
+        <td width="250">{{ player.Name }}</td>
+        <td>{{ player.arrest_count }}</td>
+      </tr>
+    </tbody>
+  </table>
 
 </div>
